# Parallel_CA

./: CMakeLists.txt
GUI/: main.js  package.json
GUI/assets/stylesheets/: index.css
GUI/src/: index.html  index.js
include/: Automaton.h  Cell.h  FileIO.h  MPI_defs.h  Utils.h
perf_tests/: performance.py
src/: Automaton.cpp  Cell.cpp  FileIO.cpp  Utils.cpp  main.cpp
